P4ADEV-1594 add CoreHealthIndicatorServiceTest